--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -19,7 +19,7 @@
 
 </head>
 
-<body onload="myfunction">
+<body>
     <!--CSS Spinner-->
     <div class="header_background">
         <h1 id="brandname">
@@ -62,18 +62,7 @@
             Copyright &copy; The Adagio
         </p>
     </footer>
-    <script>
-        var preloader = document.getElementById("loading");
-        function myFunction() {
-            preloader.style.display = "none";
-        }
-
-    </script>
 
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-
-    </script>
 
 </html>
