--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title><script src="title.js"></script></title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- CSS -->
@@ -17,7 +17,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap');
     </style>
 </head>
-<body onload="myfunction">
+<body >
     <!--CSS Spinner-->
     <div class="header_background">
         <h1 id="brandname">
@@ -88,18 +88,6 @@
             Copyright &copy; The Adagio
         </p>
     </footer>
-    <script>
-        var preloader = document.getElementById("loading");
-        function myFunction() {
-            preloader.style.display = "none";
-        }
-
-    </script>
 
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-
-    </script>
-
 </html>
