added links, instapost, texts and memberdetails

--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -49,12 +49,33 @@
     </div>
     <div class="container main-content">
         <h2 id="greet">Contact</h2>
-        
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque esse dolor consequatur officia, odio ullam
+            possimus nostrum, commodi error eligendi unde corrupti consequuntur?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis consequuntur distinctio velit rem, eius natus
+            eaque optio, quas aliquam explicabo quaerat numquam eveniet? Praesentium rem qui et hic consequuntur
+            expedita odit assumenda deserunt vitae animi nisi voluptate magni, quae vero itaque? Consectetur quo, iste
+            ullam vero, est molestiae beatae perspiciatis at, explicabo officia nihil molestias porro!</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident ipsam nulla quibusdam.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet quod illo voluptatem, quibusdam, saepe quae
+            aliquam ratione voluptatum sapiente, molestiae rem ex ad libero distinctio magnam praesentium odit
+            blanditiis officiis nesciunt suscipit. Voluptatem officiis in iure? Fugit quisquam, modi eum architecto ea
+            accusantium saepe dolor quam, impedit ullam corporis incidunt quo voluptate porro ab molestias assumenda
+            rem? Eveniet qui dolores earum libero laudantium voluptates error distinctio beatae, ratione cupiditate
+            facere corporis iste dicta, officia dolor molestiae suscipit doloremque mollitia illum velit placeat quasi
+            odit. Non quibusdam unde illum cumque? Deleniti nulla aliquid sapiente repellat obcaecati, doloremque minus
+            facilis cum modi itaque nam officia quos, ipsum optio, blanditiis ad? Ratione, accusamus delectus ab
+            doloremque repellendus modi consequatur corporis amet qui maiores, molestias ipsam aliquid necessitatibus
+            officia dolore deleniti eius quas minus excepturi neque, ullam at incidunt! Assumenda, voluptas. Nam facere
+            dolorem fugiat non, laudantium ipsam.</p>
     </div>
     <footer id="footer">
         <div class="iconbox">
             <div class="icondiv">
-                <img src="/Assets/fb.svg" class="licons" alt="">
+                <a href="" class="linkicon"><img src="/Assets/fb.svg" href="" class="licons" alt=""></a>
+                <a href="https://www.instagram.com/theadagioindia/" class="linkicon"><img src="/Assets/ig.svg" href="" class="licons" alt=""></a>
+                <a href="https://twitter.com/adagio_the" class="linkicon"><img src="/Assets/tt.svg" href="" class="licons" alt=""></a>
+                <a href="" class="linkicon"><img src="/Assets/wp.svg" href="" class="licons" alt=""></a>
+                <a href="https://www.youtube.com/channel/UCC_yfWN0Y8MdP5_UQmwpv9g" class="linkicon"><img src="/Assets/yt.svg" href="" class="licons" alt=""></a>
             </div>
         </div>
         <p id="copyright">
