--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><script src="title.js"></script></title>
+    <title>Doc</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- CSS -->
@@ -17,7 +17,8 @@
         @import url('https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap');
     </style>
 </head>
-<body >
+
+<body>
     <!--CSS Spinner-->
     <div class="header_background">
         <h1 id="brandname">
@@ -39,18 +40,29 @@
             <a href="/Pages/about.html" class="mlink">About</a>
         </li>
         <li>
-            <a href="" class="mlink">Bookings</a>
+            <a href="/Pages/bookings.html" class="mlink">Bookings</a>
         </li>
         <li>
-            <a href="" class="mlink">Contact</a>
+            <a href="/Pages/contact.html" class="mlink">Contact</a>
         </li>
     </div>
     <div class="container main-content">
         <h2 id="greet">Welcome</h2>
-        <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla eius impedit quibusdam maiores quam odit
-            porro eveniet commodi expedita veniam.
-        </p>
+        <div id="hometextarea">
+            <p>
+                The Adagio is a Musical Band From Ranchi, Jharkhand Having Three Members / Founders
+            </p>
+            <div id="membertitle">
+                <h5>Yash Raj</h5>
+                <h5>Anvesh</h5>
+                <h5>Shubhu</h5>
+            </div>
+            <div id="memberiglink">
+                <a href="">yashrajmusicc</a>
+                <a href="">themusicalstoryteller</a>
+                <a href="">groovysubhprec &nbsp;&nbsp;&nbsp;</a>
+            </div>
+        </div>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur numquam architecto adipisci repellendus
             aut nostrum fugiat veniam delectus totam nulla est voluptatum, impedit provident dolor possimus eligendi
@@ -90,4 +102,5 @@
     </footer>
 
 </body>
+
 </html>
