Added git directory ./

--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
     <!-- Menu -->
     <div class="menu">
         <li>
-            <a href="index.html" class="mlink">Home</a>
+            <a href="./index.html" class="mlink">Home</a>
         </li>
         <li>
-            <a href="/Pages/about.html" class="mlink">About</a>
+            <a href="./Pages/about.html" class="mlink">About</a>
         </li>
         <li>
-            <a href="/Pages/bookings.html" class="mlink">Bookings</a>
+            <a href="./Pages/bookings.html" class="mlink">Bookings</a>
         </li>
         <li>
-            <a href="/Pages/contact.html" class="mlink">Contact</a>
+            <a href="./Pages/contact.html" class="mlink">Contact</a>
         </li>
     </div>
     <div class="container main-content">
