--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- CSS -->
-    <link rel="stylesheet" href="/css/fonts/stylesheet.css">
+    <link rel="stylesheet" href="./css/fonts/stylesheet.css">
 
     <!-- Fonts -->
     <style>
@@ -71,15 +71,15 @@
     <footer id="footer">
         <div class="iconbox">
             <div class="icondiv">
-                <a href="" class="linkicon"><img src="/Assets/fb.svg" href="" class="licons" alt=""></a>
-                <a href="https://www.instagram.com/theadagioindia/" class="linkicon"><img src="/Assets/ig.svg" href="" class="licons" alt=""></a>
-                <a href="https://twitter.com/adagio_the" class="linkicon"><img src="/Assets/tt.svg" href="" class="licons" alt=""></a>
-                <a href="" class="linkicon"><img src="/Assets/wp.svg" href="" class="licons" alt=""></a>
-                <a href="https://www.youtube.com/channel/UCC_yfWN0Y8MdP5_UQmwpv9g" class="linkicon"><img src="/Assets/yt.svg" href="" class="licons" alt=""></a>
+                <a href="" class="linkicon"><img src="./Assets/fb.svg" href="" class="licons" alt=""></a>
+                <a href="https://www.instagram.com/theadagioindia/" class="linkicon"><img src="./Assets/ig.svg" href="" class="licons" alt=""></a>
+                <a href="https://twitter.com/adagio_the" class="linkicon"><img src="./Assets/tt.svg" href="" class="licons" alt=""></a>
+                <a href="" class="linkicon"><img src="./Assets/wp.svg" href="" class="licons" alt=""></a>
+                <a href="https://www.youtube.com/channel/UCC_yfWN0Y8MdP5_UQmwpv9g" class="linkicon"><img src="./Assets/yt.svg" href="" class="licons" alt=""></a>
             </div>
         </div>
         <p id="copyright">
-            <img src="/Assets" alt="">
+            <img src="./Assets" alt="">
             Copyright &copy; The Adagio
         </p>
     </footer>
