--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -74,7 +74,7 @@
                 <a href="" class="linkicon"><img src="../Assets/fb.svg" href="" class="licons" alt=""></a>
                 <a href="https://www.instagram.com/theadagioindia/" class="linkicon"><img src="../Assets/ig.svg" href="" class="licons" alt=""></a>
                 <a href="https://twitter.com/adagio_the" class="linkicon"><img src="../Assets/tt.svg" href="" class="licons" alt=""></a>
-                <a href="" class="linkicon"><img src="./Assets/wp.svg" href="" class="licons" alt=""></a>
+                <a href="" class="linkicon"><img src="../Assets/wp.svg" href="" class="licons" alt=""></a>
                 <a href="https://www.youtube.com/channel/UCC_yfWN0Y8MdP5_UQmwpv9g" class="linkicon"><img src="../Assets/yt.svg" href="" class="licons" alt=""></a>
             </div>
         </div>
