--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- CSS -->
-    <link rel="stylesheet" href="./css/fonts/stylesheet.css">
+    <link rel="stylesheet" href="stylesheet.css">
+    <link href="http://fonts.cdnfonts.com/css/brittney-signature" rel="stylesheet">
+                
 
     <!-- Fonts -->
     <style>
@@ -34,16 +36,16 @@
     <!-- Menu -->
     <div class="menu">
         <li>
-            <a href="./index.html" class="mlink">Home</a>
+            <a href="index.html" class="mlink">Home</a>
         </li>
         <li>
-            <a href="./Pages/about.html" class="mlink">About</a>
+            <a href="about.html" class="mlink">About</a>
         </li>
         <li>
-            <a href="./Pages/bookings.html" class="mlink">Bookings</a>
+            <a href="bookings.html" class="mlink">Bookings</a>
         </li>
         <li>
-            <a href="./Pages/contact.html" class="mlink">Contact</a>
+            <a href="contact.html" class="mlink">Contact</a>
         </li>
     </div>
     <div class="container main-content">
