--- a/bookings.html
+++ b/bookings.html
@@ -8,31 +8,19 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- CSS -->
     <link rel="stylesheet" href="stylesheet.css">
-
-    <!-- Fonts -->
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap');
     </style>
-
 </head>
 
-<body ">
-    <!--CSS Spinner-->
+<body>
     <div class=" header_background">
-    <h1 id="brandname">
-        The Adagio
-        </div>
+        <h1 id="brandname">
+            The Adagio
+    </div>
     </h1>
-    <!-- divider -->
-    <!-- 
-
-        <div class="gradient"></div>
-
-         -->
-    <!-- Menu -->
     <div class="menu">
         <li>
             <a href="index.html" class="mlink">Home</a>
@@ -90,8 +78,6 @@
             Copyright &copy; The Adagio
         </p>
     </footer>
-
-
 </body>
 
 </html>
