--- a/contact.html
+++ b/contact.html
@@ -8,31 +8,19 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- CSS -->
     <link rel="stylesheet" href="stylesheet.css">
-
-    <!-- Fonts -->
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap');
     </style>
-
 </head>
 
 <body>
-    <!--CSS Spinner-->
     <div class="header_background">
         <h1 id="brandname">
             The Adagio
     </div>
     </h1>
-    <!-- divider -->
-    <!-- 
-
-        <div class="gradient"></div>
-
-         -->
-    <!-- Menu -->
     <div class="menu">
         <li>
             <a href="index.html" class="mlink">Home</a>
@@ -72,10 +60,13 @@
         <div class="iconbox">
             <div class="icondiv">
                 <a href="" class="linkicon"><img src="Assets/fb.svg" href="" class="licons" alt=""></a>
-                <a href="https://www.instagram.com/theadagioindia/" class="linkicon"><img src="Assets/ig.svg" href="" class="licons" alt=""></a>
-                <a href="https://twitter.com/adagio_the" class="linkicon"><img src="Assets/tt.svg" href="" class="licons" alt=""></a>
+                <a href="https://www.instagram.com/theadagioindia/" class="linkicon"><img src="Assets/ig.svg" href=""
+                        class="licons" alt=""></a>
+                <a href="https://twitter.com/adagio_the" class="linkicon"><img src="Assets/tt.svg" href=""
+                        class="licons" alt=""></a>
                 <a href="" class="linkicon"><img src="../Assets/wp.svg" href="" class="licons" alt=""></a>
-                <a href="https://www.youtube.com/channel/UCC_yfWN0Y8MdP5_UQmwpv9g" class="linkicon"><img src="Assets/yt.svg" href="" class="licons" alt=""></a>
+                <a href="https://www.youtube.com/channel/UCC_yfWN0Y8MdP5_UQmwpv9g" class="linkicon"><img
+                        src="Assets/yt.svg" href="" class="licons" alt=""></a>
             </div>
         </div>
         <p id="copyright">
