--- a/about.html
+++ b/about.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>The Adagio - About</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="stylesheet.css">
+    <link rel="shortcut icon" href="./Assets/icon.png" type="image/x-icon">
+
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap');
@@ -129,7 +131,8 @@
                         style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; line-height:17px; margin-bottom:0; margin-top:8px; overflow:hidden; padding:8px 0 7px; text-align:center; text-overflow:ellipsis; white-space:nowrap;">
                         <a href="https://www.instagram.com/p/CYKFZToPEgC/?utm_source=ig_embed&amp;utm_campaign=loading"
                             style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:normal; line-height:17px; text-decoration:none;"
-                            target="_blank">A post shared by The Adagio 🎼 (@theadagioindia)</a></p>
+                            target="_blank">A post shared by The Adagio 🎼 (@theadagioindia)</a>
+                    </p>
                 </div>
             </blockquote>
             <script async src="//www.instagram.com/embed.js"></script>
