--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="stylesheet.css">
     <link href="http://fonts.cdnfonts.com/css/brittney-signature" rel="stylesheet">
-    <link rel="shortcut icon" href="./Assets/icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./Assets/favicon.ico" type="image/x-icon">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap');
