--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,8 @@
     <title>The Adagio - Contact Us</title>
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="shortcut icon" href="./Assets/favicon.ico" type="image/x-icon">
-
+    <link href="http://fonts.cdnfonts.com/css/brittany-signature" rel="stylesheet">
+                
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap');
