changed font into image

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="shortcut icon" href="./Assets/favicon.ico" type="image/x-icon">
     <link href="http://fonts.cdnfonts.com/css/brittany-signature" rel="stylesheet">
-                
+
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap');
@@ -18,8 +18,7 @@
 
 <body>
     <div class="header_background">
-        <h1 id="brandname">
-            The Adagio
+        <img src="Assets/Adagio.png" class="header_image" alt="">
     </div>
     </h1>
     <div class="menu">
