--- a/bookings.html
+++ b/bookings.html
@@ -17,11 +17,9 @@
 </head>
 
 <body>
-    <div class=" header_background">
-        <h1 id="brandname">
-            The Adagio
+    <div class="header_background">
+        <img src="Assets/Adagio.png" class="header_image" alt="">
     </div>
-    </h1>
     <div class="menu">
         <li>
             <a href="index.html" class="mlink">Home</a>
