--- a/contact.html
+++ b/contact.html
@@ -18,10 +18,8 @@
 
 <body>
     <div class="header_background">
-        <h1 id="brandname">
-            The Adagio
+        <img src="Assets/Adagio.png" class="header_image" alt="">
     </div>
-    </h1>
     <div class="menu">
         <li>
             <a href="index.html" class="mlink">Home</a>
