added tailwind and node

--- a/contact.html
+++ b/contact.html
@@ -6,71 +6,89 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Adagio - Contact Us</title>
-    <link rel="stylesheet" href="stylesheet.css">
-    <link rel="shortcut icon" href="./Assets/favicon.ico" type="image/x-icon">                
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./Assets/favicon.ico" type="image/x-icon">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap');
     </style>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1016138097132177"
+        crossorigin="anonymous"></script>
+
 </head>
 
 <body>
-    <div class="header_background">
-        <img src="Assets/Adagio.png" class="header_image" alt="">
+    <div class="flex justify-center bg-black">
+        <img src="Assets/Adagio.png" class="w-1/2" alt="">
     </div>
-    <div class="menu">
-        <li>
-            <a href="index.html" class="mlink">Home</a>
-        </li>
-        <li>
-            <a href="about.html" class="mlink">About</a>
-        </li>
-        <li>
-            <a href="bookings.html" class="mlink">Bookings</a>
-        </li>
-        <li>
-            <a href="contact.html" class="mlink">Contact</a>
-        </li>
+    <div class="bg-black ">
+        <div class="menu bg-black text-white flex justify-evenly text-2xl list-none p-4">
+            <li>
+                <a href="index.html" class="mlink">Home</a>
+            </li>
+            <li>
+                <a href="about.html" class="mlink">About</a>
+            </li>
+            <li>
+                <a href="bookings.html" class="mlink">Bookings</a>
+            </li>
+            <li>
+                <a href="contact.html" class="mlink">Contact</a>
+            </li>
+        </div>
     </div>
     <div class="container main-content">
-        <h2 id="greet">Contact</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque esse dolor consequatur officia, odio ullam
-            possimus nostrum, commodi error eligendi unde corrupti consequuntur?</p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis consequuntur distinctio velit rem, eius natus
-            eaque optio, quas aliquam explicabo quaerat numquam eveniet? Praesentium rem qui et hic consequuntur
-            expedita odit assumenda deserunt vitae animi nisi voluptate magni, quae vero itaque? Consectetur quo, iste
-            ullam vero, est molestiae beatae perspiciatis at, explicabo officia nihil molestias porro!</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident ipsam nulla quibusdam.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet quod illo voluptatem, quibusdam, saepe quae
-            aliquam ratione voluptatum sapiente, molestiae rem ex ad libero distinctio magnam praesentium odit
-            blanditiis officiis nesciunt suscipit. Voluptatem officiis in iure? Fugit quisquam, modi eum architecto ea
-            accusantium saepe dolor quam, impedit ullam corporis incidunt quo voluptate porro ab molestias assumenda
-            rem? Eveniet qui dolores earum libero laudantium voluptates error distinctio beatae, ratione cupiditate
-            facere corporis iste dicta, officia dolor molestiae suscipit doloremque mollitia illum velit placeat quasi
-            odit. Non quibusdam unde illum cumque? Deleniti nulla aliquid sapiente repellat obcaecati, doloremque minus
-            facilis cum modi itaque nam officia quos, ipsum optio, blanditiis ad? Ratione, accusamus delectus ab
-            doloremque repellendus modi consequatur corporis amet qui maiores, molestias ipsam aliquid necessitatibus
-            officia dolore deleniti eius quas minus excepturi neque, ullam at incidunt! Assumenda, voluptas. Nam facere
-            dolorem fugiat non, laudantium ipsam.</p>
-    </div>
-    <footer id="footer">
-        <div class="iconbox">
-            <div class="icondiv">
-                <a href="" class="linkicon"><img src="Assets/fb.svg" href="" class="licons" alt=""></a>
-                <a href="https://www.instagram.com/theadagioindia/" class="linkicon"><img src="Assets/ig.svg" href=""
-                        class="licons" alt=""></a>
-                <a href="https://twitter.com/adagio_the" class="linkicon"><img src="Assets/tt.svg" href=""
-                        class="licons" alt=""></a>
-                <a href="" class="linkicon"><img src="../Assets/wp.svg" href="" class="licons" alt=""></a>
-                <a href="https://www.youtube.com/channel/UCC_yfWN0Y8MdP5_UQmwpv9g" class="linkicon"><img
-                        src="Assets/yt.svg" href="" class="licons" alt=""></a>
-            </div>
+        <h2 class="text-center text-6xl p-4">Contact</h2>
+        <div class="text-center p-4">
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque esse dolor consequatur officia, odio ullam
+                possimus nostrum, commodi error eligendi unde corrupti consequuntur?</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis consequuntur distinctio velit rem, eius
+                natus
+                eaque optio, quas aliquam explicabo quaerat numquam eveniet? Praesentium rem qui et hic consequuntur
+                expedita odit assumenda deserunt vitae animi nisi voluptate magni, quae vero itaque? Consectetur quo,
+                iste
+                ullam vero, est molestiae beatae perspiciatis at, explicabo officia nihil molestias porro!</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident ipsam nulla quibusdam.</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet quod illo voluptatem, quibusdam, saepe
+                quae
+                aliquam ratione voluptatum sapiente, molestiae rem ex ad libero distinctio magnam praesentium odit
+                blanditiis officiis nesciunt suscipit. Voluptatem officiis in iure? Fugit quisquam, modi eum architecto
+                ea
+                accusantium saepe dolor quam, impedit ullam corporis incidunt quo voluptate porro ab molestias assumenda
+                rem? Eveniet qui dolores earum libero laudantium voluptates error distinctio beatae, ratione cupiditate
+                facere corporis iste dicta, officia dolor molestiae suscipit doloremque mollitia illum velit placeat
+                quasi
+                odit. Non quibusdam unde illum cumque? Deleniti nulla aliquid sapiente repellat obcaecati, doloremque
+                minus
+                facilis cum modi itaque nam officia quos, ipsum optio, blanditiis ad? Ratione, accusamus delectus ab
+                doloremque repellendus modi consequatur corporis amet qui maiores, molestias ipsam aliquid
+                necessitatibus
+                officia dolore deleniti eius quas minus excepturi neque, ullam at incidunt! Assumenda, voluptas. Nam
+                facere
+                dolorem fugiat non, laudantium ipsam.</p>
         </div>
-        <p id="copyright">
+    </div>
+    <div class="flex justify-center bg-black">
+        <div class="flex p-2 m-2 justify-evenly w-1/2 bg-white rounded-xl">
+            <a href="-----------------------------------------_" class="linkicon"><img src="Assets/fb.svg" href=""
+                    class="h-8" alt=""></a>
+            <a href="https://www.instagram.com/theadagioindia/" class="linkicon"><img src="Assets/ig.svg" href=""
+                    class="h-8" alt=""></a>
+            <a href="https://twitter.com/adagio_the" class="linkicon"><img src="Assets/tt.svg" href="" class="h-8"
+                    alt=""></a>
+            <a href="------------------------------------------" class="linkicon"><img src="../Assets/wp.svg" href=""
+                    class="h-8" alt=""></a>
+            <a href="https://www.youtube.com/channel/UCC_yfWN0Y8MdP5_UQmwpv9g" class="h-8"><img src="Assets/yt.svg"
+                    href="" class="h-8" alt=""></a>
+        </div>
+    </div>
+    <footer class="bg-black">
+        <p id="copyright" class="text-white text-center p-4">
             Copyright &copy; The Adagio
         </p>
     </footer>
-
 </body>
 
 </html>
