--- a/index.html
+++ b/index.html
@@ -6,83 +6,123 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Adagio - Home</title>
-    <link rel="stylesheet" href="stylesheet.css">
-    <link rel="shortcut icon" href="./Assets/favicon.ico" type="image/x-icon">                
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./Assets/favicon.ico" type="image/x-icon">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap');
     </style>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1016138097132177"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <div class="header_background">
-        <img src="Assets/Adagio.png" class="header_image" alt="">
+    <div class="flex justify-center bg-black">
+        <img src="Assets/Adagio.png" class="w-1/2" alt="">
     </div>
-    <div class="menu">
-        <li>
-            <a href="index.html" class="mlink">Home</a>
-        </li>
-        <li>
-            <a href="about.html" class="mlink">About</a>
-        </li>
-        <li>
-            <a href="bookings.html" class="mlink">Bookings</a>
-        </li>
-        <li>
-            <a href="contact.html" class="mlink">Contact</a>
-        </li>
+    <div class="bg-black ">
+        <div class="menu bg-black text-white flex justify-evenly text-2xl list-none p-4">
+            <li>
+                <a href="index.html" class="mlink">Home</a>
+            </li>
+            <li>
+                <a href="about.html" class="mlink">About</a>
+            </li>
+            <li>
+                <a href="bookings.html" class="mlink">Bookings</a>
+            </li>
+            <li>
+                <a href="contact.html" class="mlink">Contact</a>
+            </li>
+        </div>
     </div>
-    <div class="container main-content">
-        <h2 id="greet">Welcome</h2>
-        <div id="hometextarea">
+    <div class="">
+        <h2 class="text-center text-6xl p-4">Welcome</h2>
+        <div class="p-4 text-center">
             <p>
                 The Adagio is a Musical Band From Ranchi, Jharkhand Having Three Members / Founders
             </p>
-            <div id="membertitle">
-                <h5>Yash Raj</h5>
-                <h5>Anvesh</h5>
-                <h5>Shubhu</h5>
-            </div>
-            <div id="memberiglink">
-                <a href="">yashrajmusicc</a>
-                <a href="">themusicalstoryteller</a>
-                <a href="">groovysubhprec &nbsp;&nbsp;&nbsp;</a>
+            <div class="flex justify-evenly">
+                <div>
+                    <h5 class="text-2xl">Yash Raj</h5>
+                    <a href="">@yashrajmusicc</a>
+                </div>
+                <div>
+                    <h5 class="text-2xl">Anvesh</h5>
+                    <a href="">@themusicalstoryteller</a>
+                </div>
+                <div>
+                    <h5 class="text-2xl">Shubhu</h5>
+                    <a href="">@groovysubhprec</a>
+                </div>
             </div>
         </div>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur numquam architecto adipisci repellendus
-            aut nostrum fugiat veniam delectus totam nulla est voluptatum, impedit provident dolor possimus eligendi
-            maiores! Quam, accusantium!
-        </p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit molestias voluptas amet, necessitatibus
-            voluptates id odio aliquam itaque ratione asperiores rerum reprehenderit possimus obcaecati in, nostrum a
-            modi quis similique.</p>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident recusandae a quidem omnis, consectetur
-            iusto natus possimus tempore eos. Officia, modi aperiam? Quo pariatur, cumque tempore cum doloremque aliquam
-            magni dolores modi sint soluta non, error at? Et suscipit, rerum ab odio sint ea iusto eveniet impedit amet
-            ipsam rem quaerat asperiores. Maxime mollitia minima beatae quis impedit veniam numquam soluta pariatur
-            earum odio repellat molestias officia molestiae dignissimos optio odit, architecto tempora amet qui hic in
-            cumque error. Commodi amet earum corporis pariatur in id, quo recusandae nihil cupiditate excepturi
-            expedita? Tenetur autem rerum aperiam, eos molestias impedit numquam distinctio, in, inventore ratione
-            labore voluptas odio culpa accusantium! Veritatis, quidem aperiam. Consequatur, ex hic! Facilis voluptas
-            nihil eveniet quidem, culpa eius eaque.
-        </p>
-        <p>
-
-            ipsum dolor sit amet consectetur adipisicing elit. Corrupti quam quae saepe sapiente qui, molestiae minus
-            eaque aspernatur repellat delectus, nostrum placeat itaque impedit temporibus repellendus maiores suscipit
-            nobis quos nesciunt. Iste sed temporibus repellendus, adipisci omnis labore harum ea? Quis, quo quia illo
-            fuga numquam voluptatibus ex, rerum facilis iste tempora asperiores dolor voluptates possimus cupiditate
-            quisquam, minus iusto atque earum officia repellat deserunt sequi repudiandae quas nostrum? Voluptatum nemo
-            laudantium ab assumenda eos reiciendis, saepe deserunt ullam sed facere culpa, porro exercitationem eaque
-            sint vitae omnis facilis! Aperiam ad nam pariatur consectetur eveniet illum magni harum est eius porro ullam
-            dolor corporis, expedita saepe quaerat tempore a nostrum veritatis quis amet? Explicabo officia a quibusdam
-            adipisci ad at.
-        </p>
+        <div class="flex justify-center">
+            <div class="flex justify-center">
+                <div class="flex bg-black rounded-xl flex-wrap max-w-max">
+                    <iframe class="rounded-xl m-6" width="560" height="315"
+                        src="https://www.youtube-nocookie.com/embed/AZY527BEfPE?controls=0" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                    <iframe class="rounded-xl m-6" width="560" height="315"
+                        src="https://www.youtube-nocookie.com/embed/zyNdtaj8YTQ?controls=0" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="text-center p-4">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur numquam architecto adipisci
+                repellendus
+                aut nostrum fugiat veniam delectus totam nulla est voluptatum, impedit provident dolor possimus eligendi
+                maiores! Quam, accusantium!
+            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit molestias voluptas amet, necessitatibus
+                voluptates id odio aliquam itaque ratione asperiores rerum reprehenderit possimus obcaecati in, nostrum
+                a
+                modi quis similique.</p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident recusandae a quidem omnis,
+                consectetur
+                iusto natus possimus tempore eos. Officia, modi aperiam? Quo pariatur, cumque tempore cum doloremque
+                aliquam
+                magni dolores modi sint soluta non, error at? Et suscipit, rerum ab odio sint ea iusto eveniet impedit
+                amet
+                ipsam rem quaerat asperiores. Maxime mollitia minima beatae quis impedit veniam numquam soluta pariatur
+                earum odio repellat molestias officia molestiae dignissimos optio odit, architecto tempora amet qui hic
+                in
+                cumque error. Commodi amet earum corporis pariatur in id, quo recusandae nihil cupiditate excepturi
+                expedita? Tenetur autem rerum aperiam, eos molestias impedit numquam distinctio, in, inventore ratione
+                labore voluptas odio culpa accusantium! Veritatis, quidem aperiam. Consequatur, ex hic! Facilis voluptas
+                nihil eveniet quidem, culpa eius eaque.
+            </p>
+            <p>
+                ipsum dolor sit amet consectetur adipisicing elit. Corrupti quam quae saepe sapiente qui, molestiae
+                minus
+                eaque aspernatur repellat delectus, nostrum placeat itaque impedit temporibus repellendus maiores
+                suscipit
+                nobis quos nesciunt. Iste sed temporibus repellendus, adipisci omnis labore harum ea? Quis, quo quia
+                illo
+                fuga numquam voluptatibus ex, rerum facilis iste tempora asperiores dolor voluptates possimus cupiditate
+                quisquam, minus iusto atque earum officia repellat deserunt sequi repudiandae quas nostrum? Voluptatum
+                nemo
+                laudantium ab assumenda eos reiciendis, saepe deserunt ullam sed facere culpa, porro exercitationem
+                eaque
+                sint vitae omnis facilis! Aperiam ad nam pariatur consectetur eveniet illum magni harum est eius porro
+                ullam
+                dolor corporis, expedita saepe quaerat tempore a nostrum veritatis quis amet? Explicabo officia a
+                quibusdam
+                adipisci ad at.
+            </p>
+        </div>
     </div>
-    <footer id="footer">
-        <p id="copyright">
+    <footer class="bg-black">
+        <p id="copyright" class="text-white text-center p-4">
             Copyright &copy; The Adagio
         </p>
     </footer>
