--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
             <div class="flex justify-evenly">
                 <div>
                     <h5 class="text-2xl">Yash Raj</h5>
-                    <a href="">@yashrajmusicc</a>
+                    <a href="https://www.instagram.com/yashrajmusicc/">@yashrajmusicc</a>
                 </div>
                 <div>
                     <h5 class="text-2xl">Anvesh</h5>
-                    <a href="">@themusicalstoryteller</a>
+                    <a href="https://www.instagram.com/themusicalstoryteller/">@themusicalstoryteller</a>
                 </div>
                 <div>
                     <h5 class="text-2xl">Shubhu</h5>
-                    <a href="">@groovysubhprec</a>
+                    <a href="https://www.instagram.com/groovysubh_perc/">@groovysubhprec</a>
                 </div>
             </div>
         </div>
