--- a/contact.html
+++ b/contact.html
@@ -72,13 +72,13 @@
     </div>
     <div class="flex justify-center bg-black">
         <div class="flex p-2 m-2 justify-evenly w-1/2 bg-white rounded-xl">
-            <a href="-----------------------------------------_" class="linkicon"><img src="Assets/fb.svg" href=""
+            <a href="./404.html" class="linkicon"><img src="Assets/fb.svg" href=""
                     class="h-8" alt=""></a>
             <a href="https://www.instagram.com/theadagioindia/" class="linkicon"><img src="Assets/ig.svg" href=""
                     class="h-8" alt=""></a>
             <a href="https://twitter.com/adagio_the" class="linkicon"><img src="Assets/tt.svg" href="" class="h-8"
                     alt=""></a>
-            <a href="------------------------------------------" class="linkicon"><img src="../Assets/wp.svg" href=""
+            <a href="./404.html" class="linkicon"><img src="../Assets/wp.svg" href=""
                     class="h-8" alt=""></a>
             <a href="https://www.youtube.com/channel/UCC_yfWN0Y8MdP5_UQmwpv9g" class="h-8"><img src="Assets/yt.svg"
                     href="" class="h-8" alt=""></a>
