added express routes

--- a/public/about.html
+++ b/public/about.html
@@ -5,28 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Adagio - About</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="./Assets/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <div class="flex justify-center bg-black">
-      <img src="Assets/Adagio.png" class="w-1/2" alt="" />
+      <img src="assets/Adagio.png" class="w-1/2" alt="" />
     </div>
     <div class="bg-black">
       <div
         class="menu bg-black text-white flex justify-evenly text-2xl list-none p-4"
       >
         <li>
-          <a href="index.html" class="mlink">Home</a>
+          <a href="/" class="mlink">Home</a>
         </li>
         <li>
-          <a href="about.html" class="mlink">About</a>
+          <a href="/about" class="mlink">About</a>
         </li>
         <li>
-          <a href="bookings.html" class="mlink">Bookings</a>
+          <a href="/bookings" class="mlink">Bookings</a>
         </li>
         <li>
-          <a href="contact.html" class="mlink">Contact</a>
+          <a href="/contact" class="mlink">Contact</a>
         </li>
       </div>
     </div>
