--- a/404.html
+++ b/404.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NOT-Found</title>
-    <link rel="stylesheet" href="404.css" />
+    <link rel="stylesheet" href="css/404.css" />
   </head>
   <body>
     <div class="centre logodiv">
-      <img src="Assets/Adagio.png" class="mainlogo" alt="" />
+      <img src="assets/Adagio.png" class="mainlogo" alt="" />
     </div>
     <p
       style="color: white; text-align: center; font-size: x-large; padding: 1em"
@@ -54,7 +54,7 @@
   ></script>
   <script src="js/jquery-3.6.0.min.js"></script>
   <!-- (Animation Library) -->
-  <script src="/js/anime.min.js"></script>
+  <script src="js/anime.min.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <!-- Animation codes -->
   <script>
